--- a/japanese_test.html
+++ b/japanese_test.html
@@ -222,7 +222,7 @@
 </head>
 <body>
 <a href="help.html" style="position: fixed; top: 20px; right: 20px; padding: 10px; background-color: #61dafb; color: #282c34; text-decoration: none; border-radius: 4px;">Help / Trợ giúp</a>
-<a href="speak_japanese.html" style="position: fixed; top: 20px; left: 20px; padding: 10px; background-color: #61dafb; color: #282c34; text-decoration: none; border-radius: 4px;">Speak Japanese</a>
+<a href="read_write_TQ.html" style="position: fixed; top: 20px; left: 20px; padding: 10px; background-color: #61dafb; color: #282c34; text-decoration: none; border-radius: 4px;">Chinese / Tiếng Trung</a>
 
 <div style="text-align: center;">
     <div id="questionCounter">Câu hỏi: 0/0</div>
