--- a/japanese_test.html
+++ b/japanese_test.html
@@ -243,9 +243,7 @@
  
 <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.js"></script>
-<script src="https://unpkg.com/kuromoji@0.1.2/dist/kuromoji.js"></script>
-<script src="https://unpkg.com/kuroshiro/dist/kuroshiro.min.js"></script>
-<script src="https://unpkg.com/kuroshiro-analyzer-kuromoji/dist/kuroshiro-analyzer-kuromoji.min.js"></script>
+<!-- Removed heavy Kuroshiro/kuromoji scripts to avoid blocking on GitHub Pages -->
 <script src="https://unpkg.com/wanakana/umd/wanakana.min.js"></script>
 
 <script>
@@ -635,14 +633,22 @@
     }
 
     // Convert Kanji to Hiragana (returns promise)
+    // Convert Kanji to Hiragana (returns promise)
+    // Kuroshiro/kuromoji removed for GitHub Pages stability — fallback returns input unchanged.
     async function toHiragana(text) {
         if (!text) return '';
         try {
-            if (kuroshiro) {
-                return await kuroshiro.convert(text.toString(), { to: 'hiragana', mode: 'normal' });
+            // If wanakana is available and the input appears to be romaji, convert to hiragana
+            if (typeof wanakana !== 'undefined') {
+                // simple heuristic: if text contains ASCII letters, treat as romaji
+                if (/^[A-Za-z\s-]+$/.test(text.toString())) {
+                    try {
+                        return wanakana.toHiragana(text.toString());
+                    } catch (e) {}
+                }
             }
         } catch (e) {
-            console.error('toHiragana error', e);
+            console.error('toHiragana fallback error', e);
         }
         return text.toString();
     }
@@ -974,78 +980,8 @@
                 }
             });
         }
-        // Initialize Kuroshiro for kanji -> hiragana conversion
-        (async () => {
-            try {
-                if (window.Kuroshiro) {
-                    // handle different UMD/module shapes (default export vs ctor)
-                    let KuroshiroCtor = window.Kuroshiro;
-                    if (KuroshiroCtor && typeof KuroshiroCtor !== 'function') {
-                        if (KuroshiroCtor.default && typeof KuroshiroCtor.default === 'function') KuroshiroCtor = KuroshiroCtor.default;
-                        else if (KuroshiroCtor.Kuroshiro && typeof KuroshiroCtor.Kuroshiro === 'function') KuroshiroCtor = KuroshiroCtor.Kuroshiro;
-                    }
-
-                    if (typeof KuroshiroCtor !== 'function') {
-                        console.warn('Kuroshiro constructor not found; skipping initialization');
-                        kuroshiro = null;
-                        return;
-                    }
-
-                    kuroshiro = new KuroshiroCtor();
-
-                    let AnalyzerCtor = null;
-                    const dictPath = 'https://unpkg.com/kuromoji@0.1.2/dict/';
-
-                    // try common analyzer globals and their default exports
-                    const candidates = [
-                        window.KuroshiroAnalyzerKuromoji,
-                        window.KuromojiAnalyzer,
-                        window.Kuromoji && window.Kuromoji.Analyzer,
-                        window.Kuroshiro && window.Kuroshiro.KuroshiroAnalyzerKuromoji
-                    ];
-                    for (const c of candidates) {
-                        if (!c) continue;
-                        let ctor = c;
-                        if (ctor && typeof ctor !== 'function' && ctor.default && typeof ctor.default === 'function') ctor = ctor.default;
-                        if (typeof ctor === 'function') { AnalyzerCtor = ctor; break; }
-                    }
-
-                    if (AnalyzerCtor) {
-                        const analyzer = new AnalyzerCtor({ dictPath });
-                        await kuroshiro.init(analyzer);
-                    } else if (window.kuromoji) {
-                        // try building kuromoji tokenizer directly and pass to kuroshiro analyzer if available
-                        try {
-                            window.kuromoji.builder({ dicPath: dictPath }).build(function(err, tokenizer) {
-                                if (err) {
-                                    console.error('kuromoji build failed', err);
-                                    kuroshiro = null;
-                                    return;
-                                }
-                                // if Kuroshiro provides a Kuromoji analyzer factory under different name
-                                let KuromojiAnalyzerCtor = window.KuroshiroAnalyzerKuromoji || window.KuromojiAnalyzer || null;
-                                if (KuromojiAnalyzerCtor && KuromojiAnalyzerCtor.default) KuromojiAnalyzerCtor = KuromojiAnalyzerCtor.default;
-                                if (KuromojiAnalyzerCtor && typeof KuromojiAnalyzerCtor === 'function') {
-                                    const analyzer = new KuromojiAnalyzerCtor({ tokenizer });
-                                    kuroshiro.init(analyzer).catch(() => {});
-                                } else {
-                                    console.warn('No Kuroshiro kuromoji analyzer available after building tokenizer');
-                                    kuroshiro = null;
-                                }
-                            });
-                        } catch (e) {
-                            console.error('kuromoji build/init failed', e);
-                            kuroshiro = null;
-                        }
-                    } else {
-                        console.warn('No Kuromoji analyzer found for Kuroshiro; Kanji->Hiragana conversion disabled');
-                        kuroshiro = null;
-                    }
-                }
-            } catch (e) {
-                kuroshiro = null;
-            }
-        })();
+        // Kuroshiro/kuromoji scripts removed to avoid blocking on GitHub Pages.
+        // The app will use romaji-based fallbacks instead.
     };
 </script>
 </body>
