--- a/japanese_test.html
+++ b/japanese_test.html
@@ -207,8 +207,8 @@
 </div>
 
 
-<textarea id="answerInput" placeholder="Kiểm tra tiếng Nhật (V1)" onkeydown="handleKeyDown(event)"></textarea>
-<textarea id="writingCheckBack" placeholder="Kiểm tra chữ hiragana (V2) (kiểm tra dòng chữ thứ hai)" onkeydown="handleKeyDownBack(event)"></textarea>
+<textarea id="answerInput" placeholder="Kiểm tra tiếng Nhật (V1) (Dòng chữ thư nhất)" onkeydown="handleKeyDown(event)"></textarea>
+<textarea id="writingCheckBack" placeholder="Kiểm tra chữ hiragana (V2) (Dòng chữ thứ hai)" onkeydown="handleKeyDownBack(event)"></textarea>
 
 <div style="text-align: center;">
     <button id="checkAnswerButton" onclick="checkAnswer()">V1</button>
